# thesis-backtester-us

./: .env.example  .gitignore  CLAUDE.md  README.md  README_cn.md  README_en.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: data_dimensions_roadmap.md  framework_evolution.md  investment_thesis_backtester.md  research_cagr_analysis.md  scaling_plan.md  us_market_status.md
docs/design/: agent.md  architecture.md  backtest.md  data_layer.md  live_analysis.md  operators.md  scoring.md  screener.md
docs/site/: build.py  index.html
factors/: __init__.py  bp.py  circ_mv_yi.py  current_ratio_latest.py  debt_to_assets_latest.py  dividend_payout_avg_3y.py  dividend_years.py  dv.py  fcf_per_share.py  gross_margin_avg_3y.py  interest_debt_ratio.py  market_cap_yi.py  net_margin_avg_3y.py  ocf_to_profit_3y.py  pe_inverse.py  profit_growth_1y.py  profit_growth_5y.py  ps_ttm.py  revenue_growth_1y.py  revenue_growth_5y.py  roe_avg_3y.py  roe_stability_3y.py  roic_latest.py
factors/us/: __init__.py  buyback_yield.py  gg_quick.py  owner_earnings_yield.py  roe_avg_3y.py  sbc_ratio.py  shareholder_yield.py
operators/decision/: stress_test.md
operators/fundamental/: management_integrity.md  stream_classification.md
operators/screening/: data_source_grading.md  geopolitical_exclusion.md  soe_identification.md
operators/us_cigar/: cigar_fact_check.md  cigar_quick_screen.md  cigar_valuation_synthesis.md  pillar1_net_asset_cushion.md  pillar2_operating_maintenance.md  pillar3_realization_logic.md
operators/us_cyclical/: cyclical_synthesis.md  factor_c1_survival.md  factor_c2_cycle_phase.md  factor_c3_normalized_value.md
operators/us_growth/: capital_efficiency.md  (+3 more)
(+123 files in other folders)
